apps/routing-apps/base/backend-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-api
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`BACKEND_API_HOST`) && Path(`/ws`)
      kind: Rule
      services:
        - name: backend-api
          port: 8080
    - match: Host(`BACKEND_API_HOST`)
      kind: Rule
      services:
        - name: backend-api
          port: 8080
      middlewares:
        - name: route-backend-api-prefix
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-api-prefix
spec:
  addPrefix:
    prefix: /~api
