apps/routing-apps/base/backend-capture.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-capture
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`BACKEND_CAPTURE_HOST`)
      kind: Rule
      priority: 100
      services:
        - name: backend-invoke
          port: 8080
      middlewares:
        - name: route-backend-capture-prefix
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-capture-prefix
spec:
  addPrefix:
    prefix: /~capture
