apps/routing-apps/base/backend-invoke.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-invoke
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{subdomain:[0-9a-z-]+}.BACKEND_INVOKE_HOST`)
      kind: Rule
      services:
        - name: backend-invoke
          port: 8080
      middlewares:
        - name: route-backend-invoke-prefix
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-invoke-prefix
spec:
  addPrefix:
    prefix: /~invoke
