apps/routing-apps/base/backend-registry.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-registry
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`BACKEND_REGISTRY_HOST`)
      kind: Rule
      services:
        - name: backend-registry
          port: 8080
      middlewares:
        - name: route-backend-registry-prefix
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-registry-prefix
spec:
  addPrefix:
    prefix: /~registry
