apps/routing-apps/base/cache-service.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-cache-service
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`CACHE_SERVICE_HOST`)
      services:
        - name: cache-service
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
