apps/routing-apps/base/capture-service.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-capture-service
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`CAPTURE_SERVICE_HOST`)
      kind: Rule
      services:
        - name: capture-service
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
