apps/routing-apps/base/docs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-docs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`DOCS_HOST`)
      kind: Rule
      services:
        - name: docs
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
