apps/routing-apps/base/fetch-service.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-fetch-service
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`FETCH_SERVICE_HOST`)
      kind: Rule
      services:
        - name: fetch-service
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
