apps/routing-apps/base/frontend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-frontend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`FRONTEND_HOST`)
      services:
        - name: frontend
          port: 8080
    - kind: Rule
      match: Host(`FRONTEND_EMBED_HOST`)
      services:
        - name: frontend
          port: 8080
    - kind: Rule
      match: Host(`FRONTEND_NOTEBOOKS_HOST`)
      services:
        - name: frontend
          port: 8080
    - kind: Rule
      match: HostRegexp(`[0-9a-zA-Z_-]+.FRONTEND_EDGE_HOST`)
      services:
        - name: frontend
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
