apps/routing-apps/base/gateway-service.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-gateway-service
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`w8132bq0.run.nodescript.dev`) || Host(`xMNsMyp1B9SM8OX7.run.nodescript.dev`)
      kind: Rule
      priority: 1000
      services:
        - name: gateway-service
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
