apps/routing-apps/base/guides.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-guides
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`GUIDES_HOST`)
      kind: Rule
      services:
        - name: guides
          port: 8900
  tls:
    secretName: nodescript-dev-certificate
