apps/routing-apps/base/payment-provider-service.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-payment-provider-service
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`PAYMENT_PROVIDER_SERVICE_HOST`)
      kind: Rule
      services:
        - name: payment-provider-service
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
