apps/routing-apps/base/ws-service.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-ws-service
spec:
  entryPoints:
    - websecure
  # Note: we route WS Service to api.nodescript.dev because cookie
  # authentication uses api.nodescript.dev as the cookie domain.
  routes:
    - kind: Rule
      match: Host(`API_SERVICE_HOST`) && Path(`/ws`)
      priority: 1000
      services:
        - name: ws-service
          port: 8080
    - kind: Rule
      match: Host(`API_SERVICE_HOST`) && PathPrefix(`/capture`)
      priority: 1000
      services:
        - name: ws-service
          port: 8080
  tls:
    secretName: nodescript-dev-certificate
